--- a/Python/Python_data_science/Cw_02.ipynb
+++ b/Python/Python_data_science/Cw_02.ipynb
@@ -2403,7 +2403,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
+   "id": "707b9151",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id_': {'v': 2, 'key': [('_id', 1)]}}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection.index_information()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "fdad8a00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('61403cee6ad1a9c17598a96e'), 'author': 'kanghee', 'subject': 'mongodb', 'int_value': 10, 'list_value': [1, 2, 3]}\n",
+      "{'_id': ObjectId('61403d6e6ad1a9c17598a96f'), 'author': 'kanghee', 'subject': 'mongodb', 'int_value': 10, 'list_value': [1, 2, 3]}\n",
+      "{'_id': ObjectId('61403d6e6ad1a9c17598a970'), 'author': 'kanghee', 'subject': 'mongodb', 'int_value': 10, 'dict_value': {'a': 1, 'b': 2}}\n",
+      "{'_id': ObjectId('61403fa56ad1a9c17598a971'), 'author': 'kanghee', 'subject': 'mongodb', 'int_value': 8, 'dict_value': {'a': 1, 'b': 2}}\n",
+      "{'_id': ObjectId('61413b2bfd822a314c1a1409'), 'author': 'kanghee01', 'subject': 'mysql', 'int_value': 10, 'list_value': [1, 2, 3]}\n",
+      "{'_id': ObjectId('61413b2bfd822a314c1a140a'), 'author': 'kanghee03', 'subject': 'mongodb', 'int_value': 8, 'dict_value': {'a': 1, 'b': 2, 'c': 3}}\n",
+      "{'_id': ObjectId('61413b2bfd822a314c1a140b'), 'author': 'kanghee02', 'subject': 'mongodb', 'int_value': 8, 'dict_value': {'a': 1, 'b': 2}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in collection.find({}):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "67914fab",
    "metadata": {},
    "outputs": [
@@ -2643,7 +2689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26734692",
+   "id": "c38fc785",
    "metadata": {},
    "source": [
     "#### find 심화 \n",
@@ -2662,7 +2708,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "a5afad14",
+   "id": "0eba7e23",
    "metadata": {},
    "outputs": [
     {
@@ -2682,7 +2728,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "11f6b396",
+   "id": "3568a900",
    "metadata": {},
    "outputs": [
     {
@@ -2702,7 +2748,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b70fb3fd",
+   "id": "b36a59d7",
    "metadata": {},
    "outputs": [
     {
@@ -2722,7 +2768,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "00d9b212",
+   "id": "0444aebc",
    "metadata": {},
    "outputs": [
     {
@@ -2742,7 +2788,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b3580596",
+   "id": "6fc6ec2a",
    "metadata": {},
    "outputs": [
     {
@@ -2762,7 +2808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b5d40a6",
+   "id": "50b0d21c",
    "metadata": {},
    "source": [
     "- update\n",
@@ -2773,7 +2819,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "7cfe3279",
+   "id": "e6b83fe7",
    "metadata": {},
    "outputs": [
     {
@@ -2798,7 +2844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca664679",
+   "id": "93727594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2809,7 +2855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3059aa23",
+   "id": "7e74f2d9",
    "metadata": {},
    "source": [
     "- delete\n",
@@ -2820,7 +2866,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "8447266a",
+   "id": "da7da46e",
    "metadata": {},
    "outputs": [
     {
@@ -2844,7 +2890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "099d680a",
+   "id": "30ec98e0",
    "metadata": {},
    "source": [
     "<hr>"
@@ -2853,7 +2899,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f4d32111",
+   "id": "32702372",
    "metadata": {
     "collapsed": true
    },
@@ -3636,7 +3682,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d63db3a1",
+   "id": "010300ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3648,7 +3694,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9a55b7a0",
+   "id": "153854d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3667,7 +3713,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1362ee4b",
+   "id": "596ee516",
    "metadata": {},
    "outputs": [
     {
@@ -3765,7 +3811,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "45e874eb",
+   "id": "13f05f0c",
    "metadata": {},
    "outputs": [
     {
@@ -3793,7 +3839,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "8830569d",
+   "id": "735998eb",
    "metadata": {},
    "outputs": [
     {
