--- a/Python/Python_data_science/Crawling01; urllib, BeautifulSoup.ipynb
+++ b/Python/Python_data_science/Crawling01; urllib, BeautifulSoup.ipynb
@@ -8320,6 +8320,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3934d9cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### 실습 \n",
+    "- 데이터를 내려받아 dataframe형태로 저장해보자"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "57459e6d",
    "metadata": {},
@@ -8329,7 +8340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "id": "4d7101d0",
    "metadata": {
     "scrolled": true
@@ -8349,7 +8360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "id": "a9d057c2",
    "metadata": {
     "scrolled": true
@@ -8415,7 +8426,7 @@
        " </td></tr>]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8426,114 +8437,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "3f8dd015",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tr class=\"gift\" id=\"gift1\"><td>\n",
-       "Vegetable Basket\n",
-       "</td><td>\n",
-       "This vegetable basket is the perfect gift for your health conscious (or overweight) friends!\n",
-       "<span class=\"excitingNote\">Now with super-colorful bell peppers!</span>\n",
-       "</td><td>\n",
-       "$15.00\n",
-       "</td><td>\n",
-       "<img src=\"../img/gifts/img1.jpg\"/>\n",
-       "</td></tr>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tr class=\"gift\" id=\"gift2\"><td>\n",
-       "Russian Nesting Dolls\n",
-       "</td><td>\n",
-       "Hand-painted by trained monkeys, these exquisite dolls are priceless! And by \"priceless,\" we mean \"extremely expensive\"! <span class=\"excitingNote\">8 entire dolls per set! Octuple the presents!</span>\n",
-       "</td><td>\n",
-       "$10,000.52\n",
-       "</td><td>\n",
-       "<img src=\"../img/gifts/img2.jpg\"/>\n",
-       "</td></tr>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tr class=\"gift\" id=\"gift3\"><td>\n",
-       "Fish Painting\n",
-       "</td><td>\n",
-       "If something seems fishy about this painting, it's because it's a fish! <span class=\"excitingNote\">Also hand-painted by trained monkeys!</span>\n",
-       "</td><td>\n",
-       "$10,005.00\n",
-       "</td><td>\n",
-       "<img src=\"../img/gifts/img3.jpg\"/>\n",
-       "</td></tr>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tr class=\"gift\" id=\"gift4\"><td>\n",
-       "Dead Parrot\n",
-       "</td><td>\n",
-       "This is an ex-parrot! <span class=\"excitingNote\">Or maybe he's only resting?</span>\n",
-       "</td><td>\n",
-       "$0.50\n",
-       "</td><td>\n",
-       "<img src=\"../img/gifts/img4.jpg\"/>\n",
-       "</td></tr>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tr class=\"gift\" id=\"gift5\"><td>\n",
-       "Mystery Box\n",
-       "</td><td>\n",
-       "If you love suprises, this mystery box is for you! Do not place on light-colored surfaces. May cause oil staining. <span class=\"excitingNote\">Keep your friends guessing!</span>\n",
-       "</td><td>\n",
-       "$1.50\n",
-       "</td><td>\n",
-       "<img src=\"../img/gifts/img6.jpg\"/>\n",
-       "</td></tr>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "id": "3393c1ee",
+   "metadata": {},
+   "outputs": [],
    "source": [
+    "# tr중에서\n",
     "# th는 뻬고 사용할거다\n",
     "\n",
-    "for tr in soup.find_all('tr'):\n",
-    "    if tr.has_attr('class') and tr['class']==['gift']: # html에서 class는 여러개의 값을 가질수 있기 때문이다\n",
-    "        display(tr)"
+    "# for tr in soup.find_all('tr'):\n",
+    "#     if tr.has_attr('class') and tr['class']==['gift']: # html에서 class는 여러개의 값을 가질수 있기 때문이다\n",
+    "#         display(tr)\n",
+    "\n",
+    "# for tr in soup.find_all('tr',class_='gift'):\n",
+    "#     display(tr)\n",
+    "\n",
+    "\n",
+    "# 위의 두개의 예시처럼 너무 어렵게 할필요가 없다\n",
+    "for tr in soup.select('tr.gift'):\n",
+    "    display(tr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "7d9a0260",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 5,
+   "id": "81cce957",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -8552,69 +8481,31 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "for tr in soup.select('tr[id=\"gift1\"]'):\n",
+    "    display(tr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ae4e6601",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tr class=\"gift\" id=\"gift2\"><td>\n",
-       "Russian Nesting Dolls\n",
+       "<tr class=\"gift\" id=\"gift1\"><td>\n",
+       "Vegetable Basket\n",
        "</td><td>\n",
-       "Hand-painted by trained monkeys, these exquisite dolls are priceless! And by \"priceless,\" we mean \"extremely expensive\"! <span class=\"excitingNote\">8 entire dolls per set! Octuple the presents!</span>\n",
+       "This vegetable basket is the perfect gift for your health conscious (or overweight) friends!\n",
+       "<span class=\"excitingNote\">Now with super-colorful bell peppers!</span>\n",
        "</td><td>\n",
-       "$10,000.52\n",
+       "$15.00\n",
        "</td><td>\n",
-       "<img src=\"../img/gifts/img2.jpg\"/>\n",
-       "</td></tr>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tr class=\"gift\" id=\"gift3\"><td>\n",
-       "Fish Painting\n",
-       "</td><td>\n",
-       "If something seems fishy about this painting, it's because it's a fish! <span class=\"excitingNote\">Also hand-painted by trained monkeys!</span>\n",
-       "</td><td>\n",
-       "$10,005.00\n",
-       "</td><td>\n",
-       "<img src=\"../img/gifts/img3.jpg\"/>\n",
-       "</td></tr>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tr class=\"gift\" id=\"gift4\"><td>\n",
-       "Dead Parrot\n",
-       "</td><td>\n",
-       "This is an ex-parrot! <span class=\"excitingNote\">Or maybe he's only resting?</span>\n",
-       "</td><td>\n",
-       "$0.50\n",
-       "</td><td>\n",
-       "<img src=\"../img/gifts/img4.jpg\"/>\n",
-       "</td></tr>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tr class=\"gift\" id=\"gift5\"><td>\n",
-       "Mystery Box\n",
-       "</td><td>\n",
-       "If you love suprises, this mystery box is for you! Do not place on light-colored surfaces. May cause oil staining. <span class=\"excitingNote\">Keep your friends guessing!</span>\n",
-       "</td><td>\n",
-       "$1.50\n",
-       "</td><td>\n",
-       "<img src=\"../img/gifts/img6.jpg\"/>\n",
+       "<img src=\"../img/gifts/img1.jpg\"/>\n",
        "</td></tr>"
       ]
      },
@@ -8623,8 +8514,7 @@
     }
    ],
    "source": [
-    "# 위와 동일한 결과물이다 \n",
-    "for tr in soup.find_all('tr',class_='gift'):\n",
+    "for tr in soup.select('tr#gift1'):\n",
     "    display(tr)"
    ]
   },
@@ -8651,14 +8541,6 @@
     "for img in soup.select('.gift img'):\n",
     "    print(img['src'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "debadfcd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
