--- a/Python/Python_data_science/Cw_03.ipynb
+++ b/Python/Python_data_science/Cw_03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2f2d9ea1",
    "metadata": {},
    "outputs": [],
@@ -2277,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 4,
    "id": "010d88ea",
    "metadata": {},
    "outputs": [
@@ -2303,6 +2303,9 @@
     }
    ],
    "source": [
+    "path = './driver/chromedriver'\n",
+    "driver = webdriver.Chrome(path)\n",
+    "driver.get('http://deal.11st.co.kr/html/nc/deal/main.html')\n",
     "print('css selector - ')\n",
     "print()\n",
     "# li_tags = driver.find_elements_by_css_selector('#emergencyPrd > div > ul > li')\n",
@@ -2322,12 +2325,14 @@
     "\n",
     "li_tags = driver.find_elements_by_xpath('//*[@id=\"emergencyPrd\"]/div/ul/li[position() <= 3]')\n",
     "for li in li_tags : \n",
-    "    title = li.find_element_by_xpath('div/a/div[3]/p/span[2]')\n",
-    "    price = li.find_element_by_xpath('div/a/div[3]/div/span[2]/strong')\n",
+    "    title = li.find_element_by_xpath('./div/a/div[3]/p/span[2]')\n",
+    "    price = li.find_element_by_xpath('./div/a/div[3]/div/span[2]/strong')\n",
     "        \n",
     "    print(title.text)\n",
     "    print(price.get_attribute('innerHTML'))\n",
-    "    print(\"*\" * 50)"
+    "    print(\"*\" * 50)\n",
+    "\n",
+    "driver.close()"
    ]
   },
   {
