--- a/Python/Python_data_science/Cw_03.ipynb
+++ b/Python/Python_data_science/Cw_03.ipynb
@@ -2083,7 +2083,9 @@
     "        i+=1\n",
     "    else:\n",
     "        break\n",
-    "driver.close()"
+    "driver.close()\n",
+    "\n",
+    "print(result)"
    ]
   },
   {
