--- a/Python/Python_data_science/Cw_04.ipynb
+++ b/Python/Python_data_science/Cw_04.ipynb
@@ -15,29 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "from datetime import date,datetime,timedelta\n",
-    "from dateutil.parser import parse\n",
     "\n",
     "import json\n",
     "import re\n",
     "from glob import glob\n",
-    "\n",
-    "# 시각화\n",
-    "%matplotlib inline\n",
-    "import seaborn as sns\n",
-    "import folium as g\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib import rc\n",
-    "# 한글 폰트 문제 해결\n",
-    "rc('font', family='AppleGothic')\n",
-    "# 차트 축 <- 음수 부호 지원\n",
-    "plt.rcParams['axes.unicode_minus'] = False\n",
-    "\n",
     "\n",
     "# 크롤링\n",
     "from bs4 import BeautifulSoup\n",
@@ -776,7 +757,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -790,7 +771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
