--- a/R/R_basic/R02 ; vector functions.ipynb
+++ b/R/R_basic/R02 ; vector functions.ipynb
@@ -198,6 +198,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "0aae9d10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'kanghee ( 2020 )'</li><li>'soojin ( 2021 )'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'kanghee ( 2020 )'\n",
+       "\\item 'soojin ( 2021 )'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'kanghee ( 2020 )'\n",
+       "2. 'soojin ( 2021 )'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"kanghee ( 2020 )\" \"soojin ( 2021 )\" "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "year = c(2020,2021)\n",
+    "name = c('kanghee','soojin')\n",
+    "paste(name,'(',year,')')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "italic-farmer",
    "metadata": {},
@@ -1248,7 +1290,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "4.1.0"
   }
  },
  "nbformat": 4,
