--- a/Python/Python_ml/sklearn_02.ipynb
+++ b/Python/Python_ml/sklearn_02.ipynb
@@ -46,9 +46,7 @@
     "\n",
     "from sklearn.preprocessing import LabelEncoder,OneHotEncoder, StandardScaler, MinMaxScaler\n",
     "from sklearn.impute import SimpleImputer\n",
-    "import missingno as msno\n",
-    "\n",
-    "import graphviz"
+    "import missingno as msno\n"
    ]
   },
   {
