--- a/Python/Python_data_science/Crawling01; urllib, BeautifulSoup.ipynb
+++ b/Python/Python_data_science/Crawling01; urllib, BeautifulSoup.ipynb
@@ -8058,65 +8058,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "id": "a6c21ea8",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<div id=\"fixed-bar-wrap\">\n",
-       " <h1 id=\"fixed-bar-logo-title\">\n",
-       " <a href=\"https://www.daangn.com/\">\n",
-       " <span class=\"sr-only\">당근마켓</span>\n",
-       " <img alt=\"당근마켓\" class=\"fixed-logo\" src=\"https://d1unjqcospf8gs.cloudfront.net/assets/home/base/header/logo-basic-24b18257ac4ef693c02233bf21e9cb7ecbf43ebd8d5b40c24d99e14094a44c81.svg\"/>\n",
-       " </a> </h1>\n",
-       " <section id=\"fixed-bar-search\">\n",
-       " <div class=\"search-input-wrap\">\n",
-       " <span class=\"sr-only\">검색</span>\n",
-       " <input class=\"fixed-search-input\" id=\"header-search-input\" name=\"header-search-input\" placeholder=\"동네 이름, 물품명 등을 검색해보세요!\" type=\"text\"/>\n",
-       " <button id=\"header-search-button\">\n",
-       " <img alt=\"Search\" class=\"fixed-search-icon\" src=\"https://d1unjqcospf8gs.cloudfront.net/assets/home/base/header/search-icon-7008edd4f9aaa32188f55e65258f1c1905d7a9d1a3ca2a07ae809b5535380f14.svg\"/>\n",
-       " </button>\n",
-       " </div>\n",
-       " </section>\n",
-       " <section class=\"fixed-bar-menu\">\n",
-       " <div class=\"fixed-download-wrapper\">\n",
-       " <input class=\"fixed-checkbox\" id=\"fixed-menu-checkbox\" type=\"checkbox\"/>\n",
-       " <label class=\"fixed-label\" for=\"fixed-menu-checkbox\">\n",
-       "           다운로드\n",
-       "           <svg class=\"menu-icon-svg\" fill=\"none\" height=\"7\" viewbox=\"0 0 12 7\" width=\"12\" xmlns=\"http://www.w3.org/2000/svg\">\n",
-       " <path d=\"M1 1L6 6L11 1\" stroke=\"#4D5159\" strokelinecap=\"round\" strokelinejoin=\"round\" strokewidth=\"1.5\"></path>\n",
-       " </svg>\n",
-       " </label>\n",
-       " <ul class=\"fixed-menu-ul\">\n",
-       " <li>\n",
-       " <a class=\"menu-anchor\" href=\"https://itunes.apple.com/kr/app/pangyojangteo/id1018769995?l=ko&amp;ls=1&amp;mt=8\" id=\"header-download-button-ios\" target=\"_blank\">\n",
-       " <img alt=\"App Store\" src=\"https://d1unjqcospf8gs.cloudfront.net/assets/home/base/header/apple-store-3a664174124650d63cae365bc55586fc5ff27b822b1b97788fc4af77d73d00c8.svg\"/>\n",
-       " <span>App Store</span>\n",
-       " </a> </li>\n",
-       " <li>\n",
-       " <a class=\"menu-anchor\" href=\"https://play.google.com/store/apps/details?id=com.towneers.www\" id=\"header-download-button-android\" target=\"_blank\">\n",
-       " <img alt=\"Google Play\" src=\"https://d1unjqcospf8gs.cloudfront.net/assets/home/base/header/google-play-c9ad0fc573cd01e2b982df5de6709a3d8d7cec8d9b58a5c08db7da0b92a32a75.svg\"/>\n",
-       " <span>Google Play</span>\n",
-       " </a> </li>\n",
-       " </ul>\n",
-       " </div>\n",
-       " <a href=\"https://chat.daangn.com\" target=\"_blank\">\n",
-       " <button class=\"chat-button\">\n",
-       " <span class=\"button-text\">당근채팅</span>\n",
-       " <span class=\"button-beta\">Beta</span>\n",
-       " </button>\n",
-       " </a>\n",
-       " </section>\n",
-       " </div>]"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'soup' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/v3/m9cgmw1d3qs7ppj4ltvx26pc0000gn/T/ipykernel_2505/944822641.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# direct child\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tobody'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'soup' is not defined"
+     ]
     }
    ],
    "source": [
@@ -8336,7 +8293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
