--- a/Python/Python_data_science/DW.ipynb
+++ b/Python/Python_data_science/DW.ipynb
@@ -40,67 +40,301 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f54394c6",
+   "metadata": {},
+   "source": [
+    "### Codes for crawling the fifa datset from www.sofifa.com\n",
+    "- we only extract the columns that we need"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "68dd460e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('fifa.csv','w', newline='')\n",
-    "wr = csv.writer(f)\n",
+    "# f = open('fifa.csv','w', newline='')\n",
+    "# wr = csv.writer(f)\n",
     "\n",
-    "wr.writerow(['Id','Name','Age','Nationality','Team','Contract','Height','Weight','Preferred Foot',\n",
-    "             'Overall','Potential','Best overall','Best position','Growth','Joined','Loan date end','Value','Wage','Total Stats',\n",
-    "             'Base Stats','International Reputation'])\n",
+    "# wr.writerow(['Id','Name','Age','Nationality','Team','Contract','Height','Weight','Preferred Foot',\n",
+    "#              'Overall','Potential','Best overall','Best position','Growth','Joined','Loan date end','Value','Wage','Total Stats',\n",
+    "#              'Base Stats','International Reputation'])\n",
     "\n",
-    "for offset in range(0,319):\n",
-    "    url = 'https://sofifa.com/players?type=all&r=220001&set=true&showCol%5B%5D=pi&showCol%5B%5D=ae&showCol%5B%5D=hi&showCol%5B%5D=wi&showCol%5B%5D=pf&showCol%5B%5D=oa&showCol%5B%5D=pt&showCol%5B%5D=bo&showCol%5B%5D=bp&showCol%5B%5D=gu&showCol%5B%5D=jt&showCol%5B%5D=le&showCol%5B%5D=vl&showCol%5B%5D=wg&showCol%5B%5D=tt&showCol%5B%5D=bs&showCol%5B%5D=ir&offset='\n",
-    "    url += str(offset*60) \n",
+    "# for offset in range(0,319):\n",
+    "#     url = 'https://sofifa.com/players?type=all&r=220001&set=true&showCol%5B%5D=pi&showCol%5B%5D=ae&showCol%5B%5D=hi&showCol%5B%5D=wi&showCol%5B%5D=pf&showCol%5B%5D=oa&showCol%5B%5D=pt&showCol%5B%5D=bo&showCol%5B%5D=bp&showCol%5B%5D=gu&showCol%5B%5D=jt&showCol%5B%5D=le&showCol%5B%5D=vl&showCol%5B%5D=wg&showCol%5B%5D=tt&showCol%5B%5D=bs&showCol%5B%5D=ir&offset='\n",
+    "#     url += str(offset*60) \n",
     "    \n",
-    "    webpage = requests.get(url, headers={\"User-Agent\": \"Mozilla/5.0\"})\n",
-    "    soup = BeautifulSoup(webpage.text,'html.parser')\n",
-    "    trs = soup.select('tbody>tr')\n",
-    "    for tr in trs:\n",
-    "        player_id = tr.select('td.col-pi')[0].text\n",
-    "        name = tr.select('.ellipsis')[0].text\n",
-    "        team = tr.select('td.col-name')[1].select('a')[0].text\n",
-    "        contract = tr.select('td.col-name')[1].select('.sub')[0].text\n",
-    "        nationality = tr.select('td.col-name > img')[0]['title']\n",
-    "        age = tr.select('td.col.col-ae')[0].text\n",
-    "        height = tr.select('td.col.col-hi')[0].text\n",
-    "        weight = tr.select('td.col.col-wi')[0].text\n",
-    "        foot = tr.select('td.col.col-pf')[0].text\n",
-    "        ova = tr.select('td.col.col-oa')[0].text\n",
-    "        best_overall = tr.select('td.col.col-bo')[0].text\n",
-    "        potential = tr.select('td.col.col-pt')[0].text\n",
-    "        best_position = tr.select('td.col.col-bp')[0].text\n",
-    "        growth = tr.select('td.col.col-gu')[0].text\n",
-    "        joined = tr.select('td.col.col-jt')[0].text\n",
-    "        loan_ended = tr.select('td.col.col-le')[0].text\n",
-    "        value = tr.select('td.col.col-vl')[0].text\n",
-    "        wage = tr.select('td.col.col-wg')[0].text\n",
-    "        total_stat = tr.select('td.col.col-tt')[0].text\n",
-    "        base_stat = tr.select('td.col.col-bs')[0].text\n",
-    "        international_ranking = tr.select('td.col.col-ir')[0].text\n",
-    "        wr.writerow([player_id,name,age,nationality,team,contract,height,\n",
-    "                    weight,foot,ova,potential,best_overall,best_position,growth,joined,\n",
-    "                    loan_ended,value,wage,total_stat,base_stat,international_ranking])\n",
-    "f.close()"
+    "#     webpage = requests.get(url, headers={\"User-Agent\": \"Mozilla/5.0\"})\n",
+    "#     soup = BeautifulSoup(webpage.text,'html.parser')\n",
+    "#     trs = soup.select('tbody>tr')\n",
+    "#     for tr in trs:\n",
+    "#         player_id = tr.select('td.col-pi')[0].text\n",
+    "#         name = tr.select('.ellipsis')[0].text\n",
+    "#         team = tr.select('td.col-name')[1].select('a')[0].text\n",
+    "#         contract = tr.select('td.col-name')[1].select('.sub')[0].text\n",
+    "#         nationality = tr.select('td.col-name > img')[0]['title']\n",
+    "#         age = tr.select('td.col.col-ae')[0].text\n",
+    "#         height = tr.select('td.col.col-hi')[0].text\n",
+    "#         weight = tr.select('td.col.col-wi')[0].text\n",
+    "#         foot = tr.select('td.col.col-pf')[0].text\n",
+    "#         ova = tr.select('td.col.col-oa')[0].text\n",
+    "#         best_overall = tr.select('td.col.col-bo')[0].text\n",
+    "#         potential = tr.select('td.col.col-pt')[0].text\n",
+    "#         best_position = tr.select('td.col.col-bp')[0].text\n",
+    "#         growth = tr.select('td.col.col-gu')[0].text\n",
+    "#         joined = tr.select('td.col.col-jt')[0].text\n",
+    "#         loan_ended = tr.select('td.col.col-le')[0].text\n",
+    "#         value = tr.select('td.col.col-vl')[0].text\n",
+    "#         wage = tr.select('td.col.col-wg')[0].text\n",
+    "#         total_stat = tr.select('td.col.col-tt')[0].text\n",
+    "#         base_stat = tr.select('td.col.col-bs')[0].text\n",
+    "#         international_ranking = tr.select('td.col.col-ir')[0].text\n",
+    "#         wr.writerow([player_id,name,age,nationality,team,contract,height,\n",
+    "#                     weight,foot,ova,potential,best_overall,best_position,growth,joined,\n",
+    "#                     loan_ended,value,wage,total_stat,base_stat,international_ranking])\n",
+    "# f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ea969f5f",
+   "execution_count": null,
+   "id": "15ac4eee",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ea969f5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Nationality</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Contract</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Preferred Foot</th>\n",
+       "      <th>Overall</th>\n",
+       "      <th>Potential</th>\n",
+       "      <th>Best overall</th>\n",
+       "      <th>Best position</th>\n",
+       "      <th>Growth</th>\n",
+       "      <th>Joined</th>\n",
+       "      <th>Loan date end</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Wage</th>\n",
+       "      <th>Total Stats</th>\n",
+       "      <th>Base Stats</th>\n",
+       "      <th>International Reputation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>158023</td>\n",
+       "      <td>L. Messi</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>Paris Saint-Germain</td>\n",
+       "      <td>\\n2021 ~ 2023</td>\n",
+       "      <td>170cm</td>\n",
+       "      <td>72kg</td>\n",
+       "      <td>Left</td>\n",
+       "      <td>93</td>\n",
+       "      <td>93</td>\n",
+       "      <td>93</td>\n",
+       "      <td>RW</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Aug 10, 2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>€78M</td>\n",
+       "      <td>€320K</td>\n",
+       "      <td>2219</td>\n",
+       "      <td>462</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>188545</td>\n",
+       "      <td>R. Lewandowski</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>FC Bayern München</td>\n",
+       "      <td>\\n2014 ~ 2023</td>\n",
+       "      <td>185cm</td>\n",
+       "      <td>81kg</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>92</td>\n",
+       "      <td>92</td>\n",
+       "      <td>92</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Jul 1, 2014</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>€119.5M</td>\n",
+       "      <td>€270K</td>\n",
+       "      <td>2212</td>\n",
+       "      <td>460</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>231747</td>\n",
+       "      <td>K. Mbappé</td>\n",
+       "      <td>22</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Paris Saint-Germain</td>\n",
+       "      <td>\\n2018 ~ 2022</td>\n",
+       "      <td>182cm</td>\n",
+       "      <td>73kg</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>91</td>\n",
+       "      <td>95</td>\n",
+       "      <td>92</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Jul 1, 2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>€194M</td>\n",
+       "      <td>€230K</td>\n",
+       "      <td>2175</td>\n",
+       "      <td>470</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>200389</td>\n",
+       "      <td>J. Oblak</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Slovenia</td>\n",
+       "      <td>Atlético de Madrid</td>\n",
+       "      <td>\\n2014 ~ 2023</td>\n",
+       "      <td>188cm</td>\n",
+       "      <td>87kg</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>91</td>\n",
+       "      <td>93</td>\n",
+       "      <td>91</td>\n",
+       "      <td>GK</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Jul 16, 2014</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>€112M</td>\n",
+       "      <td>€130K</td>\n",
+       "      <td>1413</td>\n",
+       "      <td>489</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>192985</td>\n",
+       "      <td>K. De Bruyne</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>\\n2015 ~ 2025</td>\n",
+       "      <td>181cm</td>\n",
+       "      <td>70kg</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>91</td>\n",
+       "      <td>91</td>\n",
+       "      <td>91</td>\n",
+       "      <td>CM</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Aug 30, 2015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>€125.5M</td>\n",
+       "      <td>€350K</td>\n",
+       "      <td>2304</td>\n",
+       "      <td>485</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Id            Name  Age Nationality                 Team  \\\n",
+       "0  158023        L. Messi   34   Argentina  Paris Saint-Germain   \n",
+       "1  188545  R. Lewandowski   32      Poland    FC Bayern München   \n",
+       "2  231747       K. Mbappé   22      France  Paris Saint-Germain   \n",
+       "3  200389        J. Oblak   28    Slovenia   Atlético de Madrid   \n",
+       "4  192985    K. De Bruyne   30     Belgium      Manchester City   \n",
+       "\n",
+       "        Contract Height Weight Preferred Foot  Overall  Potential  \\\n",
+       "0  \\n2021 ~ 2023  170cm   72kg           Left       93         93   \n",
+       "1  \\n2014 ~ 2023  185cm   81kg          Right       92         92   \n",
+       "2  \\n2018 ~ 2022  182cm   73kg          Right       91         95   \n",
+       "3  \\n2014 ~ 2023  188cm   87kg          Right       91         93   \n",
+       "4  \\n2015 ~ 2025  181cm   70kg          Right       91         91   \n",
+       "\n",
+       "   Best overall Best position  Growth        Joined Loan date end    Value  \\\n",
+       "0            93            RW       0  Aug 10, 2021           NaN     €78M   \n",
+       "1            92            ST       0   Jul 1, 2014           NaN  €119.5M   \n",
+       "2            92            ST       4   Jul 1, 2018           NaN    €194M   \n",
+       "3            91            GK       2  Jul 16, 2014           NaN    €112M   \n",
+       "4            91            CM       0  Aug 30, 2015           NaN  €125.5M   \n",
+       "\n",
+       "    Wage  Total Stats  Base Stats  International Reputation  \n",
+       "0  €320K         2219         462                         5  \n",
+       "1  €270K         2212         460                         5  \n",
+       "2  €230K         2175         470                         4  \n",
+       "3  €130K         1413         489                         5  \n",
+       "4  €350K         2304         485                         4  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "fifa = pd.read_csv('fifa.csv')"
+    "# load datset fifa.csv\n",
+    "fifa = pd.read_csv('fifa.csv')\n",
+    "\n",
+    "# display first 5 of fifa datset\n",
+    "fifa.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "917c3654",
+   "metadata": {},
+   "source": [
+    "### Codes for downloading league table of 5 best leagues in Europe 2021\n",
+    "- used read_html\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "984db320",
    "metadata": {},
    "outputs": [
@@ -409,7 +643,7 @@
        "17    18             FC Schalke 04      16 -61     34    3     7    24  25  86"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
