--- a/ML.ipynb
+++ b/ML.ipynb
@@ -4797,6 +4797,111 @@
    "source": [
     "pd.read_csv('predict.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40b6e0a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07c34973",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c311157",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 현재 undersample 썻을때 가장 높았음\n",
+    "# one hot이 3프로가까이 더 잘나옴 확실히 잘나옴\n",
+    "many_null_cols = [col for col in df_transaction.columns if df_transaction[col].isnull().sum() / df_transaction.shape[0] > 0.2]\n",
+    "origin_x = df_transaction.drop(columns=['isFraud','TransactionID'])\n",
+    "origin_x = origin_x.drop(columns=many_null_cols)\n",
+    "origin_y = df_transaction['isFraud']\n",
+    "\n",
+    "test_x = df_transaction_test[origin_x.columns]\n",
+    "\n",
+    "# categorical features engineering\n",
+    "card1_top_10 = origin_x['card1'].value_counts().iloc[0:20].index\n",
+    "card2_top_10 = origin_x['card2'].value_counts().iloc[0:20].index\n",
+    "card3_top_5 = origin_x['card3'].value_counts().iloc[0:10].index\n",
+    "card5_top_5 = origin_x['card5'].value_counts().iloc[0:10].index\n",
+    "\n",
+    "origin_x['card1'] = origin_x['card1'].apply(lambda x: 'rest' if x not in card1_top_10 else x).astype(str)\n",
+    "origin_x['card2'] = origin_x['card2'].apply(lambda x: 'rest' if x not in card2_top_10 else x).astype(str)\n",
+    "origin_x['card3'] = origin_x['card3'].apply(lambda x: 'rest' if x not in card3_top_5 else x).astype(str)\n",
+    "origin_x['card5'] = origin_x['card5'].apply(lambda x: 'rest' if x not in card5_top_5 else x).astype(str)\n",
+    "\n",
+    "origin_x['card4'] = origin_x['card4'].apply(lambda x: 'rest' if x not in ['mastercard','discover','visa','american express'] else x )\n",
+    "origin_x['card6'] = origin_x['card6'].apply(lambda x:'rest' if x not in ['debit','credit'] else x)\n",
+    "\n",
+    "domain_top_5 = origin_x['P_emaildomain'].value_counts()[0:10]\n",
+    "origin_x['P_emaildomain'] = origin_x['P_emaildomain'].apply(lambda x: 'rest' if x not in domain_top_5 else x)\n",
+    "\n",
+    "address1_top10 = origin_x['addr1'].value_counts().iloc[0:20]\n",
+    "origin_x['addr1'] = origin_x['addr1'].apply(lambda x: 'rest' if x not in address1_top10 else x).astype(str)\n",
+    "address2_top10 = origin_x['addr2'].value_counts().iloc[0:20]\n",
+    "origin_x['addr2'] = origin_x['addr2'].apply(lambda x: 'rest' if x not in address2_top10 else x).astype(str)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# set classifier using pipeline\n",
+    "categorical_features = ['ProductCD','card1','card2','card3','card4','card5','card6','P_emaildomain','addr1','addr2']\n",
+    "\n",
+    "categorical_transformer = OneHotEncoder(sparse=False,handle_unknown='ignore')\n",
+    "\n",
+    "\n",
+    "numeric_features = origin_x.columns.drop(categorical_features)\n",
+    "\n",
+    "numeric_transformer = Pipeline(\n",
+    "    steps=[(\"imputer\", SimpleImputer(fill_value=-999)), (\"scaler\", StandardScaler())]\n",
+    ")\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"num\", numeric_transformer, numeric_features),\n",
+    "        (\"cat\", categorical_transformer, categorical_features),\n",
+    "    ]\n",
+    ")\n",
+    "clf = imb_Pipeline(\n",
+    "    steps=[(\"preprocessor\", preprocessor) , ('undersampe',RandomUnderSampler())\n",
+    "           ,(\"classifier\", RandomForestClassifier())]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# test data\n",
+    "\n",
+    "test_x['card1'] = test_x['card1'].apply(lambda x: 'rest' if x not in card1_top_10 else x).astype(str)\n",
+    "test_x['card2'] = test_x['card2'].apply(lambda x: 'rest' if x not in card2_top_10 else x).astype(str)\n",
+    "test_x['card3'] = test_x['card3'].apply(lambda x: 'rest' if x not in card3_top_5 else x).astype(str)\n",
+    "test_x['card5'] = test_x['card5'].apply(lambda x: 'rest' if x not in card5_top_5 else x).astype(str)\n",
+    "\n",
+    "test_x['card4'] = test_x['card4'].apply(lambda x: 'rest' if x not in ['mastercard','discover','visa','american express'] else x )\n",
+    "test_x['card6'] = test_x['card6'].apply(lambda x:'rest' if x not in ['debit','credit'] else x)\n",
+    "\n",
+    "test_x['P_emaildomain'] = test_x['P_emaildomain'].apply(lambda x: 'rest' if x not in domain_top_5 else x)\n",
+    "\n",
+    "test_x['addr1'] = test_x['addr1'].apply(lambda x: 'rest' if x not in address1_top10 else x).astype(str)\n",
+    "test_x['addr2'] = test_x['addr2'].apply(lambda x: 'rest' if x not in address2_top10 else x).astype(str)\n",
+    "\n",
+    "\n",
+    "\n",
+    "clf.fit(origin_x,origin_y)\n",
+    "predict_prob = clf.predict_proba(test_x)[:,1]\n",
+    "csv_df = pd.DataFrame({'TransactionID':df_transaction_test['TransactionID'],'isFraud':predict_prob})\n",
+    "csv_df = csv_df.set_index('TransactionID')\n",
+    "csv_df.to_csv('predict.csv')"
+   ]
   }
  ],
  "metadata": {
